Fix z-index

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
 }
 
 .swal-overlay {
-    z-index: 1000;
+    z-index: 2;
 }
 
 #title {
@@ -113,6 +113,7 @@ button:hover {
 }
 
 #predict {
+    z-index: 1;
     margin-top:30px; 
 }
 
